--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=/Users/Alex/Library/Application Support/NetBeans/8.1/config/GlassFishEE6/Properties/gfv31260388310.properties
+deploy.ant.properties.file=C:\\Users\\minda\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv31398238665.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Users/Alex/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/Users/Alex/GlassFish_Server/glassfish
-j2ee.server.instance=[/Users/Alex/GlassFish_Server/glassfish:/Users/Alex/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/Users/Alex/GlassFish_Server
+j2ee.server.domain=C:/Users/minda/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/Users/Alex/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\minda\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
